[package]
name = "cronet-rs"
version = "0.0.1"
edition = "2021"
authors = ["Sleeyax"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { version = "0.2.11", optional = true }
once_cell = "1.16.0"

[build-dependencies]
bindgen = "0.60.1"

[features]
default = ["client"]
client = ["dep:http"]
